--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "types/**/*.ts",
-    "types/**/*.d.ts"
+    "app/types/**/*.ts",
+    "app/types/**/*.d.ts"
   ],
   "exclude": ["node_modules"]
 }
