--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/ws": "^8.5.13",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "ts-node": "^10.9.2",
