--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
+    
   },
+  "prisma": {
+  "schema": "./prisma/schema.prisma"
+}
+,
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@types/socket.io": "^3.0.1",
